# FFmpegpp

./: .clang-format  CMakeLists.txt
FFmpegpp/: CMakeLists.txt
FFmpegpp/include/ffmpegpp/: frame.h  packet.h
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_frame.cpp
